--- a/style.css
+++ b/style.css
@@ -44,6 +44,9 @@ body {
     text-align: left;
 }
 
+.botones1 {
+    padding-top: 12px;
+}
 .botonNegro {
     color: rgb(255, 255, 255);
     background-color: rgb(239, 216, 89);
@@ -53,6 +56,7 @@ body {
     font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-style: normal;
+   
 }
 
 .botonNegro:hover {
@@ -72,6 +76,7 @@ body {
     font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-style: normal;
+    
 }
 
 .botonBorde:hover {
